--- a/sample.env
+++ b/sample.env
@@ -1,10 +1,10 @@
 API_ID=24509589
 API_HASH=717cf21d94c4934bcbe1eaa1ad86ae75
 TOKEN=
-OWNER_ID=7044783841
-OWNER_USERNAME=JARVIS_V2
-SUPPORT_CHAT=Dora_Hub
+OWNER_ID=1679112664
+OWNER_USERNAME=OfficialDurgesh
+SUPPORT_CHAT=TheTeamVk
 LOGGER_ID=-1002014167331
-DEV_USERS=7044783841
+DEV_USERS=1679112664
 MONGO_DB_URI=
 DATABASE_URL=
